<resources>
    <string name="app_name">智慧车站</string>
    <string name="btn_complete">完成</string>
    <string name="btn_confirm">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_click_to_start">点击开始</string>
    <string name="btn_check_update">检查更新</string>
    <string name="btn_click_to_finish">点击完成</string>
    <string name="btn_wait_acceptance">待验收</string>
    <string name="btn_restart">重新开始</string>
    <string name="btn_logout">注销</string>
    <string name="btn_command">命令</string>
    <string name="btn_cooperation">协作</string>
    <string name="btn_take_photo"><![CDATA[拍照>>]]></string>
    <string name="btn_video"><![CDATA[录像>>]]></string>
    <string name="btn_record"><![CDATA[录音>>]]></string>
    <string name="btn_issue">发布</string>
    <string name="btn_pass">通过</string>
    <string name="btn_not_pass">未通过</string>
    <string name="btn_add">添加</string>
    <string name="btn_update">更新</string>
    <string name="btn_delete">删除</string>
    <string name="btn_select_all">全选</string>
    <string name="btn_select_none">全不选</string>
    <string name="btn_submit">上报</string>
    <string name="btn_add_problem">添加问题</string>
    <string name="btn_device_repair">设备报修</string>
    <string name="btn_update_now">立即更新</string>
    <string name="btn_update_later">暂不更新</string>
    <string name="btn_broadcast">广播</string>
    <string name="btn_rephotograph">重拍</string>
    <string name="default_patrol_date">----年--月--日巡检计划</string>
    <string name="default_check_state">默认状态</string>
    <string name="default_counter_150">0/150</string>
    <string name="default_counter_100">0/100</string>
    <string name="dialog_on_login">登录中</string>
    <string name="dialog_on_search">查询中</string>
    <string name="dialog_on_logout">注销中</string>
    <string name="dialog_on_issue">发布中</string>
    <string name="dialog_on_submit">上报中</string>
    <string name="dialog_sure_to_start">确定要开始吗？</string>
    <string name="dialog_sure_to_finish">确定要完成吗？</string>
    <string name="dialog_sure_to_delete">确定要删除吗？</string>
    <string name="dialog_after_exiting_data_will_be_cleared_are_you_sure">退出之后将清空所填数据，确定退出吗?</string>
    <string name="dialog_downloading_installation_package">正在下载安装包…</string>
    <string name="dialog_add_problem_desc">添加问题描述</string>
    <string name="dialog_sure_exist_problem">确定存在问题吗？</string>
    <string name="dialog_sure_no_problem">确定没有问题吗？</string>
    <string name="dialog_sure_to_pass">确定通过吗？</string>
    <string name="dialog_sure_to_not_pass">确定未通过吗？</string>
    <string name="hint_input_account">请输入账号</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="hint_ip_address">请输入IP地址</string>
    <string name="hint_input_port">请输入端口号</string>
    <string name="hint_search">搜索</string>
    <string name="hint_select_station">请选择车站</string>
    <string name="hint_capture_qr_code">将二维码/条码放入框内，即可自动扫描</string>
    <string name="hint_no_data_click_retry">没有数据，点击重试</string>
    <string name="hint_load_failed_click_retry">获取数据失败，点击重试</string>
    <string name="name_account">账号</string>
    <string name="name_password">密码</string>
    <string name="name_ip_address">IP地址</string>
    <string name="name_port">端口号</string>
    <string name="name_plan_time">计划时间</string>
    <string name="name_train_number">车次</string>
    <string name="name_task_name">任务名称</string>
    <string name="name_operation_name">作业名称</string>
    <string name="name_execution_time">执行时间</string>
    <string name="name_command_name">命令名称</string>
    <string name="name_cooperation_name">协作名称</string>
    <string name="name_plan_start">计划开始</string>
    <string name="name_plan_finish">计划结束</string>
    <string name="name_bluetooth_address">蓝牙地址：</string>
    <string name="name_last_time_receive_signal">最近收到信号时间：</string>
    <string name="name_submit_time">提交时间：</string>
    <string name="name_device_name">设备名称：</string>
    <string name="name_reminder_content">提醒内容：</string>
    <string name="name_start_time">开始时间：</string>
    <string name="name_end_time">结束时间：</string>
    <string name="name_command_content">命令内容：</string>
    <string name="name_cooperation_content">协作内容：</string>
    <string name="name_issue_order_group">发令班组：</string>
    <string name="name_order_group">受令班组：</string>
    <string name="name_issue_cooperation_group">发起班组：</string>
    <string name="name_cooperation_group">协作班组：</string>
    <string name="name_plan">计划</string>
    <string name="name_real">实际</string>
    <string name="name_location">位置</string>
    <string name="name_note_content">备注内容：</string>
    <string name="name_publisher_uploaded_record">任务发布人上传附件：</string>
    <string name="name_performer_uploaded_record">任务执行人上传附件：</string>
    <string name="name_arrive_time">到位时间</string>
    <string name="name_finish_time">完成时间</string>
    <string name="name_time_limit">解决时限：</string>
    <string name="name_problem_desc">问题描述：</string>
    <string name="prefix_sure_to_delete">确定要删除</string>
    <string name="prefix_items">项吗？</string>
    <string name="prefix_selected">已选</string>
    <string name="spinner_all">全部</string>
    <string name="spinner_not_started">未开始</string>
    <string name="spinner_doing">进行中</string>
    <string name="spinner_finished">已完成</string>
    <string name="spinner_unfinished">未完成</string>
    <string name="spinner_station_name">智慧车站</string>
    <string name="suffix_operation">个作业</string>
    <string name="suffix_command">个命令</string>
    <string name="suffix_cooperation">个协作</string>
    <string name="suffix_plan">个步骤</string>
    <string name="suffix_year">年</string>
    <string name="suffix_month">月</string>
    <string name="suffix_minute">分</string>
    <string name="suffix_item">项</string>
    <string name="suffix_track">道</string>
    <string name="suffix_platform">站台</string>
    <string name="suffix_waiting_room">候</string>
    <string name="suffix_check_port">口</string>
    <string name="symbol_separator">/</string>
    <string name="symbol_hour_minute">"--:--"</string>
    <string name="symbol_progress">0/100</string>
    <string name="tab_dispatch">到发</string>
    <string name="tab_operation">作业</string>
    <string name="tab_contacts">联系人</string>
    <string name="tab_grid">网格</string>
    <string name="tab_scene">现场</string>
    <string name="tab_reminder">提醒</string>
    <string name="tab_my_task">我的任务</string>
    <string name="tab_task_monitor">任务监控</string>
    <string name="tab_command_and_cooperation">命令与协作</string>
    <string name="tab_up">上行</string>
    <string name="tab_down">下行</string>
    <string name="tab_team_group">班组</string>
    <string name="tab_contact_group">联系人组</string>
    <string name="tab_user_message">用户消息</string>
    <string name="tab_todo">待办事项</string>
    <string name="tab_system_remind">系统提醒</string>
    <string name="tab_patrol_plan">巡视计划</string>
    <string name="tab_problem_manager">问题管理</string>
    <string name="title_btn_login">登录</string>
    <string name="title_btn_login_config">登录配置</string>
    <string name="title_issue_command">发布命令</string>
    <string name="title_issue_cooperation">发布协作</string>
    <string name="title_problem_list">问题列表</string>
    <string name="title_add_todo">添加待办事项</string>
    <string name="title_operation_remind">作业提醒</string>
    <string name="title_command_remind">命令提醒</string>
    <string name="title_cooperation_remind">协作提醒</string>
    <string name="title_grid_remind">网格提醒</string>
    <string name="title_plan_remind">预案提醒</string>
    <string name="title_btn_note">备注</string>
    <string name="title_select_team">选择班组</string>
    <string name="title_select_train">选择车次</string>
    <string name="title_take_photo">拍照</string>
    <string name="title_record_video">录像</string>
    <string name="title_record">录音</string>
    <string name="title_operation_detail">作业详情</string>
    <string name="title_command_detail">命令详情</string>
    <string name="title_task_detail">任务详情</string>
    <string name="title_alarm_detail">预警详情</string>
    <string name="title_grid_detail">网格详情</string>
    <string name="title_cooperation_detail">协作详情</string>
    <string name="title_version_update">版本更新</string>
    <string name="title_patrol_item">巡视项目</string>
    <string name="title_qr_code">二维码/条码</string>
    <string name="title_input_device_id">请输入设备ID</string>
    <string name="title_key_passenger">重点旅客</string>
    <string name="title_lost">失误登记</string>
    <string name="toast_complete_login_data">用户名密码不能为空</string>
    <string name="toast_need_config_ip_port">请先配置IP地址和端口号</string>
    <string name="toast_login_failed">登录失败</string>
    <string name="toast_incorrect_username_pwd">用户名密码错误</string>
    <string name="toast_complete_ip_port">地址端口号不能为空</string>
    <string name="toast_format_error">格式错误</string>
    <string name="toast_mq_connect_failed">MQ连接失败</string>
    <string name="toast_check_sdcard">请检查SD卡状态</string>
    <string name="toast_change_state_failed">更改状态失败</string>
    <string name="toast_confirm_success">确认成功</string>
    <string name="toast_confirm_failed">确认失败</string>
    <string name="toast_bluetooth_not_support">该设备不支持蓝牙功能</string>
    <string name="toast_video_not_support">该设备不支持录像功能</string>
    <string name="toast_open_bluetooth_failed">打开蓝牙失败，巡视功能暂不可用</string>
    <string name="toast_complete_info">请将信息填写完整</string>
    <string name="toast_only_read_remind_can_be_selected">只有已读提醒才能被选中</string>
    <string name="toast_only_read_remind_can_be_deleted">只有已读提醒才可以删除</string>
    <string name="toast_delete_success">删除成功</string>
    <string name="toast_delete_failed">删除失败</string>
    <string name="toast_set_read_failed">置为已读失败</string>
    <string name="toast_no_selected_item">当前没有已选项</string>
    <string name="toast_start_time_cannot_be_later_than_finish_time">开始时间不能晚于结束时间</string>
    <string name="toast_finish_time_cannot_be_earlier_than_start_time">结束时间不能早于开始时间</string>
    <string name="toast_upload_success">上传成功</string>
    <string name="toast_upload_failed">上传失败</string>
    <string name="toast_download_success">下载成功</string>
    <string name="toast_download_failed">下载失败</string>
    <string name="toast_wait_for_files_upload_complete">请等待附件上传完成</string>
    <string name="toast_issue_success">发布成功</string>
    <string name="toast_issue_failed">发布失败</string>
    <string name="toast_local_file_clear_failed">本地文件清空失败</string>
    <string name="toast_local_file_clear_success">本地文件清空成功</string>
    <string name="toast_current_version_is_the_latest">当前已是最新版本</string>
    <string name="toast_check_update_failed">检查更新失败</string>
    <string name="toast_no_corresponding_program">没有对应的查看程序</string>
    <string name="toast_submit_failed">上报失败</string>
    <string name="toast_device_mismatch">设备不匹配</string>
    <string name="toast_check_device_failed">查询设备失败</string>
    <string name="toast_capture_failed">扫描失败</string>
    <string name="toast_add_device_first">请先添加设备</string>
    <string name="toast_get_subclass_failed">获取子类失败</string>
    <string name="toast_no_subclass">没有可选子类</string>
    <string name="toast_get_patrol_data_first">需要先获取巡视项目</string>
    <string name="toast_user_login_on_other_device">当前用户在其他终端登录</string>
    <string name="value_nothing">无</string>
    <string name="value_grid_task">网格任务</string>
    <string name="value_alarm_task">预警任务</string>
    <string name="value_check_in_progress">正在检票</string>
    <string name="value_check_finished">完成检票</string>
    <string name="value_check_stopped">停止检票</string>
    <string name="value_late">(晚点)</string>
    <string name="value_late_unsure">(晚点未定)</string>
    <string name="value_stop_run">(停运)</string>
    <string name="recording">录音中…</string>
    <string name="title_update_toto">更新代办事项</string>
    <string name="title_passenger_broadcast">客运广播</string>
    <string name="title_area_broadcast">小区广播</string>
    <string name="title_transfer">交班</string>
    <string name="title_light">照明</string>
    <string name="title_elevator">电梯</string>
    <string name="title_water">给水</string>
</resources>