<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.winsion.dispatch.view.AlphaTabsIndicator
        android:id="@+id/ati_indicator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d54"
        android:layout_alignParentBottom="true"
        android:background="@color/gray7"
        android:orientation="horizontal">

        <com.winsion.dispatch.view.AlphaTabView
            android:id="@+id/atv_operation"
            style="@style/BottomTabBarStyle"
            app:tabIconNormal="@drawable/ic_operation"
            app:tabIconSelected="@drawable/ic_operation_selected"
            app:tabText="@string/tab_operation" />

        <com.winsion.dispatch.view.AlphaTabView
            android:id="@+id/atv_dispatch"
            style="@style/BottomTabBarStyle"
            app:tabIconNormal="@drawable/ic_dispatch"
            app:tabIconSelected="@drawable/ic_dispatch_selected"
            app:tabText="@string/tab_dispatch" />

        <com.winsion.dispatch.view.AlphaTabView
            android:id="@+id/atv_contacts"
            style="@style/BottomTabBarStyle"
            app:tabIconNormal="@drawable/ic_contacts"
            app:tabIconSelected="@drawable/ic_contacts_selected"
            app:tabText="@string/tab_contacts" />

        <com.winsion.dispatch.view.AlphaTabView
            android:id="@+id/atv_scene"
            style="@style/BottomTabBarStyle"
            app:tabIconNormal="@drawable/ic_scene"
            app:tabIconSelected="@drawable/ic_scene_selected"
            app:tabText="@string/tab_scene" />

        <com.winsion.dispatch.view.AlphaTabView
            android:id="@+id/atv_reminder"
            style="@style/BottomTabBarStyle"
            app:tabIconNormal="@drawable/ic_reminder"
            app:tabIconSelected="@drawable/ic_reminder_selected"
            app:tabText="@string/tab_reminder" />
    </com.winsion.dispatch.view.AlphaTabsIndicator>

    <com.winsion.dispatch.view.NoScrollViewPager
        android:id="@+id/vp_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ati_indicator" />

    <com.winsion.dispatch.view.CircleImageView
        android:id="@+id/iv_head"
        android:layout_width="@dimen/d48"
        android:layout_height="@dimen/d48"
        android:layout_alignParentEnd="true"
        android:background="?android:attr/selectableItemBackground"
        android:padding="@dimen/d9"
        android:src="@drawable/ic_head"
        app:civ_border_color="@color/black6"
        app:civ_border_width="@dimen/d0_5" />
</RelativeLayout>