<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.winsion.dispatch.view.TitleView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:showConfirmButton="false"
        app:titleText="@string/title_btn_login_config" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/d48"
        android:layout_marginLeft="@dimen/d20"
        android:layout_marginRight="@dimen/d20"
        android:layout_marginTop="@dimen/d20"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/d70"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/name_ip_address"
            android:textColor="@color/gray5"
            android:textSize="@dimen/s20" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/hint_ip_address"
                android:paddingStart="@dimen/d10"
                android:singleLine="true"
                android:textColor="@color/white1"
                android:textColorHint="@color/gray7"
                android:textSize="@dimen/s20"
                tools:ignore="RtlSymmetry" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/d1"
        android:layout_marginStart="@dimen/d10"
        android:background="@color/gray5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/d48"
        android:layout_marginLeft="@dimen/d20"
        android:layout_marginRight="@dimen/d20"
        android:layout_marginTop="@dimen/d10"
        android:orientation="horizontal">

        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="@dimen/d70"
            android:layout_height="wrap_content"
            android:text="@string/name_port"
            android:textColor="@color/gray5"
            android:textSize="@dimen/s20" />

        <EditText
            android:id="@+id/et_port"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/hint_input_port"
            android:inputType="number"
            android:paddingStart="@dimen/d10"
            android:singleLine="true"
            android:textColor="@color/white1"
            android:textColorHint="@color/gray7"
            android:textSize="@dimen/s20"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/d1"
        android:layout_marginStart="@dimen/d10"
        android:background="@color/gray5" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d48"
        android:layout_marginLeft="@dimen/d10"
        android:layout_marginRight="@dimen/d10"
        android:layout_marginTop="@dimen/d20"
        android:background="@drawable/btn_yellow"
        android:text="@string/btn_confirm"
        android:textSize="@dimen/s18" />
</LinearLayout>