<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/basic_div_horizontal"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/basic_gray8"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/div_vertical"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/basic_d10"
            android:textColor="@color/basic_blue1"
            android:textSize="@dimen/basic_s20"
            tools:text="3候车室" />

        <View
            android:layout_width="@dimen/basic_d1"
            android:layout_height="@dimen/basic_d45"
            android:layout_gravity="center_vertical"
            android:background="@color/basic_black1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/basic_d15"
            android:layout_marginRight="@dimen/basic_d15"
            android:orientation="vertical"
            android:paddingBottom="@dimen/basic_d10"
            android:paddingTop="@dimen/basic_d10">

            <TextView
                android:id="@+id/tv_plan_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_plan_start"
                android:textColor="@color/basic_gray2"
                android:textSize="@dimen/basic_s15" />

            <TextView
                android:id="@+id/tv_plan_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/basic_d7"
                android:textColor="@color/basic_blue1"
                android:textSize="@dimen/basic_s15"
                tools:text="14:20" />

            <TextView
                android:id="@+id/tv_plan_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/basic_d10"
                android:text="@string/name_plan_finish"
                android:textColor="@color/basic_gray2"
                android:textSize="@dimen/basic_s15" />

            <TextView
                android:id="@+id/tv_plan_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/basic_d7"
                android:textColor="@color/basic_yellow2"
                android:textSize="@dimen/basic_s15"
                tools:text="14:20" />
        </LinearLayout>

        <View
            android:layout_width="@dimen/basic_d1"
            android:layout_height="@dimen/basic_d45"
            android:layout_gravity="center_vertical"
            android:background="@color/basic_black1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/basic_d17"
            android:layout_marginRight="@dimen/basic_d17">

            <TextView
                android:id="@+id/tv_finish_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/basic_blue1"
                android:textSize="@dimen/basic_s20"
                tools:text="5" />

            <TextView
                android:id="@+id/tv_split_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/symbol_separator"
                android:textColor="@color/basic_gray2"
                android:textSize="@dimen/basic_s20" />

            <TextView
                android:id="@+id/tv_total_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/basic_blue1"
                android:textSize="@dimen/basic_s20"
                tools:text="10" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/div_vertical"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_bottom_split"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/basic_div_horizontal"
        tools:ignore="ContentDescription" />
</LinearLayout>